ATO-418, ATO-83 - Using CSS style (Marian, Boris, Sebastian) * STAT/AliDrawStyle.cxx, STAT/AliDrawStyle.h STAT/test/testDrawArrayHisto.C   * ATO-418 - Rename SetCSSStyle to RegisterCssStyle * STAT/test/AliDrawStyleTest.C STAT/test/testDrawArrayHisto.C, STAT/test/alirootTestStyle.css   * updated tests for the CSS style and example CSS style file * STAT/AliTreeTrending.cxx STAT/AliTreeTrending.h   * Using CSS style for drawing   * TPad, TGraphs, bands ...   * Adding routing for the bands drawing

--- a/STAT/test/AliTreeTrending.css
+++ b/STAT/test/AliTreeTrending.css
@@ -15,9 +15,10 @@ TGraph#obj1, TGraph.Status#TPC.QA.dcar_posA_1   {
 
 .deadBand   {
     marker_size:   1,1,1;
-    marker_color:  400,632,416;; /* marker_color defenition */
-    line_color:    2,3,4;/* line_color defenition */
-    line_style:    2,3,4;
+    marker_color:  800,632,416; /* marker_color definition */
+    line_color:    800,632,416;/* line_color definition */
+    line_style:    1,2,6;
+    line_width:    2,2,2;
 }
 
 .multiGraph   {      /*like figTemplateTRD   markerstyles: 20,21,24,25,27,28,34,33,29,30*/
